# sevn

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  sevn  test.env  upload_to_pypi.py
src/: __init__.py
src/cli/: __init__.py  commands.py  main.py
src/sevn/: __init__.py
src/sevn/cli/: __init__.py  commands.py  main.py
src/sevn/core/: __init__.py  crypto.py  profiles.py
