[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sevn"
version = "1.0.1"
description = "A secure environment variable manager"
readme = "README.md"
authors = [
    { name = "Tim Hoerner", email = "thoerner@gmail.com" }
]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development",
]
dependencies = [
    "cryptography>=41.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sevn = "sevn:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sevn", "sevn.cli", "sevn.core"] 